--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,11 @@ tramp
 *_flymake.*
 
 # eshell files
-/eshell/history
-/eshell/lastdir
+**/eshell/history
+**/eshell/lastdir
 
 # elpa packages
-/elpa/
+**/elpa/**
 
 # reftex files
 *.rel
