chore(gitignore): Ignore some stuff

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ projectile.cache
 recentf
 *.eld
 /home/.emacs.d/snippets/git-commit-mode/.yas-parents
+config.el
+config.html
+**/url/**
+**/pcache/**
